# Version History

## unreleased

## 0.5.0

* [LOW-489] Field type packet-item

## 0.4.0

* [LOW-505] Add support for IEEE 488.2 Definite Length Arbitrary Data Block responses

## 0.3.1

* [MCCS-1622] Update to new ska-ser-devices version with transport layer logging

## 0.3.0

* [LOW-478] Support int type attributes
* [LOW-478] Use rsplit on argument separator

## 0.2.1

* [LOW-473] Include the argument separator spec in the InterfaceDefinitionType

## 0.2.0

* [LOW-473]
  * Support read, write and read_write keys in YAML file (breaking change)
  * Support equals separator
  * Support return response spec

## 0.1.0

* [LOW-464] Bootstrap repo and add SCPI package