@@ -2,6 +2,8 @@
 
 ## unreleased
 
+* [MCCS-1636] Use ska-ser-sphinx-theme for documentation
+
 ## 0.5.0
 
 * [LOW-489] Field type packet-item
